--- a/Style.css
+++ b/Style.css
@@ -4,6 +4,7 @@ h2 {
 
 body {
   font-family: "Noto Sans", sans-serif;
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
 #temperature {
   font-family: sans-serif;
