--- a/Style.css
+++ b/Style.css
@@ -4,8 +4,8 @@ h2 {
 
 body {
   font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-  letter-spacing: 1px;
+  font-weight: 500;
+  letter-spacing: 2px;
   color: white;
   max-width: 430px;
   position: relative;
@@ -25,6 +25,13 @@ body {
 }
 
 #city {
+  text-transform: uppercase;
+}
+
+#description {
+  color: #d3d3d3;
+  font-weight: 100;
+  font-size: 12px;
   text-transform: uppercase;
 }
 
