--- a/Style.css
+++ b/Style.css
@@ -2,6 +2,10 @@ h2 {
   font-size: 14px;
 }
 
+h6 {
+  font-weight: 100;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
@@ -91,10 +95,13 @@ hr {
   font-size: 10px;
 }
 
+#next-hours {
+  margin: 4px;
+}
+
 .form-control {
   font-size: 14px;
   border: none;
-  padding-bottom: 2%;
 }
 
 .temperature-metric {
@@ -110,6 +117,20 @@ hr {
 }
 
 .forecast {
-  margin-top: 10px;
-  padding: 14px;
+  margin: -2px 0 auto 4px;
+  padding-right: 50px;
+  display: block;
+  text-align: center;
+}
+
+.forecast-temperature {
+  font-size: 25px;
+  text-align: center;
+}
+
+forecast.img {
+  display: block;
+  margin: 0 auto;
+  height: 48px;
+  width: 48px;
 }
