--- a/Style.css
+++ b/Style.css
@@ -59,11 +59,11 @@ hr {
 }
 
 #pressureName {
-  color: rgb(117, 117, 117);
+  color: rgb(114, 114, 114);
 }
 
 #humidityName {
-  color: rgb(125, 125, 125);
+  color: rgb(120, 120, 120);
 }
 
 #background {
@@ -143,7 +143,7 @@ forecast.img {
 
 @media only screen and (max-width: 768px), (min-height: 600px) {
   body {
-    background-color: #d3d3d3;
+    background-color: #ebebeb;
     width: 90%;
     height: 80%;
   }
