--- a/Style.css
+++ b/Style.css
@@ -141,11 +141,13 @@ forecast.img {
   width: 48px;
 }
 
-@media only screen and (max-width: 768px), (min-height: 600px) {
+@media only screen and (max-width: 768px) {
   body {
     background-color: #ebebeb;
     width: 90%;
-    height: 80%;
+  }
+  div.container {
+    height: 634px;
   }
   div h6 {
     font-size: 10px;
