--- a/Style.css
+++ b/Style.css
@@ -143,7 +143,7 @@ forecast.img {
 
 @media only screen and (max-width: 768px) {
   body {
-    background-color: #ebebeb;
+    background-color: #ffdcc8;
     width: 90%;
   }
   div.container {
