--- a/Style.css
+++ b/Style.css
@@ -112,6 +112,7 @@ hr {
   font-size: 14px;
   position: relative;
   top: 50px;
+  left: 25px;
   padding: 25px;
   max-width: 100px;
   color: #999;
@@ -161,7 +162,8 @@ forecast.img {
   div .temperature-metric {
     font-size: 14px;
     position: relative;
-    right: -40px;
+    right: 50px;
+    left: 50px;
     padding: 14px;
   }
   div.forecast-temperature {
